# django-ddd

./: .gitignore  django_Dockerfile  docker-compose.yaml  entry.sh  frontend_Dockerfile
frontend/www/: README.md  package.json
src/: pyproject.toml  resetdb.sh
src/app/: admin.py  models.py  urls.py
src/app/domain/: application_service.py
src/app/domain/domain_models/: value_objects.py
src/app/domain/domain_models/entities/: ddd_sample_entity.py  sample_user_entity.py
src/app/domain/sample_users/: entity.py  gateway.py  repository.py  service.py
src/app/domain/services/: application_service.py  ddd_sample_service.py  sample_user_service.py
src/app/domain/services/domain_services/: sample_service.py  sample_user_service.py
src/app/domain_back/domain_models/: value_objects.py
src/app/domain_back/domain_models/entities/: sample_user_entity.py
src/app/domain_back/services/domain_services/: sample_user_service.py
src/app/management/commands/: domain.py  make_seed.py  orator.py  resetdb.py  runseed.py
src/app/migrations/: 0001_initial.py
src/app/orator/: __init__.py  permission.py  sample_permission.py  sample_user.py  user.py
src/app/orator/sample/: sample_permission.py  sample_user.py
src/app/repositories/: ddd_sample_repository.py  sample_repository.py  sample_user_repository.py
src/app/views/: ddd_sample_views.py  sample_user_views.py  sample_user_views.py.back  sample_views.py  test_views.py  web_sample_views.py
src/project/: settings.py  urls.py
src/templates/sample/: create.html  edit.html  index.html  show.html
(+10 files in other folders)
