[tool.poetry]
name = "django_ddd"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.6"
django = "^2.2"
djangorestframework = "^3.10"
orator = "^0.9.9"
gunicorn = "^19.9"
django-environ = "^0.4.5"
psycopg2-binary = "^2.8"

[tool.poetry.dev-dependencies]
flake8 = "^3.7"
pylint = "^2.3"
django-debug-toolbar = "^2.0"
django-extensions = "^2.2"
bpython = "^0.18.0"
pyformat = "^0.7.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
